# kiva-iccv

./: .env.template  .gitignore  .gitmodules  LICENSE  README.md  distribution_config_example.yaml  makefile  pyproject.toml  submission.json  torch_improvements.md
kiva-iccv/: config.py  dataset.py  loss.py  model.py  on_the_fly_dataset.py  train.py  transform.py
kiva-iccv/utils/: download.py  evaluate.py  helper.py  transform.py
kiva-iccv/utils/dataset/: __init__.py  apply_kiva.py  apply_kiva_functions.py  apply_kiva_functions_compositionality.py  chained_transformations_kiva.py  chained_transformations_kiva_adults.py  transformations_kiva.py  transformations_kiva_adults.py
notebook/: KiVA_Challenge_Baseline.ipynb  data_analysis.ipynb  helper.py
report/: references.bib  report.tex
scripts/: set_up_data.sh
