[project]
name = "kiva-iccv"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pillow",
    "ipython",
    "ipykernel",
    "pip",
    "numpy",
    "pandas",
    "textwrap3",
    "importlib-metadata",
    "requests",
    "matplotlib",
    "tqdm",
    "torch",
    "torchvision",
    "pydantic",
    "neptune",
    "timm",
]


[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "doc-venv",
    ".svn",
    "build",
    "notebook/*",
]

[tool.ruff.format]
quote-style = "double"            # Like Black, use double quotes for strings.
indent-style = "space"            # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto"              # Like Black, automatically detect the appropriate line ending.

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # comprehensions
    # "SIM",  # flake8-simplify
    "I",   # isort
    "ERA", # eradicate
    "T20", # print
    # "PL",  # pylint
]
ignore = ["T20", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"kiva-iccv/utils/helper.py" = ["E501"] # some lines like prompts are long, we don't care
